penktos dienos mogo ikelimas

--- a/3diena/mogo-projektas/styles/abstracts/_variables.scss
+++ b/3diena/mogo-projektas/styles/abstracts/_variables.scss
@@ -4,7 +4,7 @@ $kaushan: 'Kaushan Script', cursive;
 $montserrat: 'Montserrat', sans-serif;
 $roboto: 'Roboto', sans-serif;
 
-// font sizes
+// font sizes from design
 
 $extralarge: 150px;
 $large: 72px;
@@ -16,6 +16,14 @@ $small: 15px;
 $extrasmall: 14px;
 $ssmallest: 13px;
 $smallest: 12px;
+
+// fonts sizes for breakpoints
+
+$xxlg: 120px;
+$xlg: 100px;
+$mlg: 60px;
+$emlg: 55px;
+$xxs: 10px;
 
 // colors
 
