--- a/3diena/mogo-projektas/styles/pages/_blog.scss
+++ b/3diena/mogo-projektas/styles/pages/_blog.scss
@@ -58,6 +58,8 @@
   }
 }
 
+// for screens less than 1200px and more than 992px
+
 @media only screen and (min-width: $large-breakpoint) and (max-width: $extra-large-breakpoint) {
 
   #blog {
@@ -84,6 +86,8 @@
   }
 }
 
+// for screens less than 992px and more than 600px
+
 @media only screen and (min-width: $small-breakpoint) and (max-width: $large-breakpoint) {
 
   #blog {
@@ -109,6 +113,8 @@
     }
   }
 }
+
+// for screens less than 600px
 
 @media only screen and (max-width: $small-breakpoint) {
   #blog {
