--- a/3diena/mogo-projektas/styles/pages/_service.scss
+++ b/3diena/mogo-projektas/styles/pages/_service.scss
@@ -126,7 +126,7 @@
   }
 }
 
-// reviews section 1
+// reviews section one
 
 .reviews-section-one {
   background: url('../images/grey-line.jpg') center;
@@ -145,6 +145,12 @@
 
     .review-item-icon {
       width: 3%;
+
+      img {
+        width: 100%;
+        max-width: 15px;
+        height: auto;
+      }
     }
 
     .review-item-icon:last-child {
@@ -219,6 +225,8 @@
 
 // breakpoints
 
+// for screens less than 1200px and more than 992px
+
 @media only screen and (min-width: $large-breakpoint) and (max-width: $extra-large-breakpoint) {
 
   // service section
@@ -230,14 +238,13 @@
       .service-item {
         display: block;
         width: 50%;
-        padding: 50px 0 50px 0;
+        padding: 50px 0;
         margin: 0 auto;
 
         .service-icon {
           display: inline-block;
           width: 5%;
-          padding-right: 10px;
-          padding-left: 10px;
+          padding: 0 10px;
         }
 
         .service-text {
@@ -284,8 +291,7 @@
     }
   }
 
-
-  // reviews section 1
+  // reviews section one
 
   .reviews-section-one {
     .review-items {
@@ -294,8 +300,9 @@
       }
     }
   }
-
 }
+
+// for screens less than 992px and more than 768px
 
 @media only screen and (min-width: $medium-breakpoint) and (max-width: $large-breakpoint) {
   // service section
@@ -307,7 +314,7 @@
       .service-item {
         display: block;
         width: 40%;
-        padding: 50px 0px 50px 0px;
+        padding: 50px 0;
         margin: 0 auto;
 
         .service-icon {
@@ -319,7 +326,7 @@
         .service-text {
           display: inline-block;
           width: 80%;
-          padding: 0 0px 0px 10px;
+          padding: 0 0 0 10px;
         }
       }
     }
@@ -358,11 +365,11 @@
 
           .activity-text {
             width: 80%;
-            vertical-align: top;
-            padding: 10px 0 0 10px;
+            vertical-align: middle;
+            padding: 0 0 0 10px;
 
             h6 {
-              padding-bottom: 20px;
+              padding-bottom: 0;
               display: inline;
             }
 
@@ -374,7 +381,7 @@
 
           .activity-icon {
             width: 5%;
-            vertical-align: middle;
+            vertical-align: top;
             padding-right: 7px;
           }
         }
@@ -383,15 +390,15 @@
           margin-bottom: 10px;
 
           .activity-text {
-            width: 75%;
-            padding-right: 45px;
+            width: 78%;
+            padding-right: 35px;
           }
         }
       }
     }
   }
 
-  // reviews section 1
+  // reviews section one
 
   .reviews-section-one {
     .review-items {
@@ -406,8 +413,9 @@
       }
     }
   }
-
 }
+
+// for screens less than 768px and more than 600px
 
 @media only screen and (min-width: $small-breakpoint) and (max-width: $medium-breakpoint) {
   // service section
@@ -419,7 +427,7 @@
       .service-item {
         display: block;
         width: 40%;
-        padding: 50px 0px 50px 0px;
+        padding: 50px 0px;
         margin: 0 auto;
 
         .service-icon {
@@ -431,7 +439,7 @@
         .service-text {
           display: inline-block;
           width: 75%;
-          padding: 0 0px 0px 10px;
+          padding: 0 0 0 10px;
         }
       }
     }
@@ -470,11 +478,11 @@
 
           .activity-text {
             width: 75%;
-            vertical-align: top;
+            // vertical-align: top;
             padding: 0 0 0 10px;
 
             h6 {
-              padding-bottom: 20px;
+              padding-bottom: 30px;
               display: inline;
             }
 
@@ -491,15 +499,15 @@
 
         .activity-item:nth-child(2) {
           .activity-text {
-            width: 70%;
-            padding-right: 45px;
+            width: 75%;
+            padding-right: 30px;
           }
         }
       }
     }
   }
 
-  // reviews section 1
+  // reviews section one
 
   .reviews-section-one {
     .review-items {
@@ -514,8 +522,9 @@
       }
     }
   }
-
 }
+
+// for screens less than 600px
 
 @media only screen and (max-width: $small-breakpoint) {
   // service section
@@ -527,7 +536,7 @@
       .service-item {
         display: block;
         width: 70%;
-        padding: 50px 0px 50px 0px;
+        padding: 50px 0px;
         margin: 0 auto;
 
         .service-icon {
@@ -540,7 +549,7 @@
         .service-text {
           display: inline-block;
           width: 100%;
-          padding: 0 0px 0px 10px;
+          padding: 0 0 0 10px;
           text-align: center;
         }
       }
@@ -554,7 +563,7 @@
 
       .picture {
         display: block;
-        width: 50%;
+        width: 80%;
         padding: 0;
         margin: 0 auto;
 
@@ -566,7 +575,7 @@
 
       .activity {
         display: block;
-        width: 50%;
+        width: 80%;
         margin: 0 auto;
         padding: 0;
 
@@ -579,9 +588,9 @@
           }
 
           .activity-text {
-            width: 65%;
-            vertical-align: top;
-            padding: 0 0 0 10px;
+            width: 68%;
+            vertical-align: middle;
+            padding: 0 20px 0 10px;
 
             h6 {
               padding-bottom: 20px;
@@ -601,20 +610,22 @@
 
         .activity-item:nth-child(2) {
           .activity-text {
-            width: 65%;
-            padding-right: 30px;
+            width: 78%;
+            padding-right: 20px;
           }
         }
       }
     }
   }
 
-  // reviews section 1
+  // reviews section one
 
   .reviews-section-one {
     .review-items {
+      padding-right: 0;
+
       .review-item-text {
-        width: 45%;
+        width: 70%;
         padding: 0;
         display: block;
         margin: 0 auto;
@@ -634,6 +645,7 @@
         display: block;
         margin: 0 auto;
         padding: 20px 0;
+        width: 20%;
       }
 
       .review-item-icon {
@@ -644,6 +656,10 @@
   }
 
 }
+
+// team section breakpoint
+
+// for screens less than 1200px
 
 @media only screen and (max-width: $extra-large-breakpoint) {
 
